<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.javaclaw</groupId>
    <artifactId>javaclaw</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>JavaClaw</name>
    <description>基于 JavaFX 和 AgentScope 的智能体桌面聊天应用</description>

    <properties>
        <!-- 编码与 JDK 版本（JDK 25 LTS：虚拟线程无 pinning、Scoped Values 正式版） -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>

        <!-- 依赖版本管理 -->
        <!-- JavaFX 24：兼容 JDK 25，原生库支持 macOS aarch64 -->
        <javafx.version>25</javafx.version>
        <agentscope.version>1.0.12</agentscope.version>
        <logback.version>1.4.14</logback.version>
        <angus.mail.version>2.0.3</angus.mail.version>
        <pdfbox.version>3.0.4</pdfbox.version>
        <richtextfx.version>0.11.7</richtextfx.version>
        <commonmark.version>0.24.0</commonmark.version>
        <eclipsestore.version>4.1.0</eclipsestore.version>
        <h2.version>2.3.232</h2.version>
    </properties>

    <!--
        AgentScope BOM：统一管理 agentscope-* 全部子模块版本。
        引入 BOM 后，下面声明的 agentscope-* 依赖都无需写 version。
    -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.agentscope</groupId>
                <artifactId>agentscope-bom</artifactId>
                <version>${agentscope.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!--
            AgentScope 全功能包
            包含: OkHttp、Jackson、SLF4J API、Reactor Core 等
            无需单独声明这些传递依赖；版本由 agentscope-bom 统一管理
        -->
        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope</artifactId>
        </dependency>

        <!--
            Quartz 调度器（通过 AgentScope scheduler-quartz 扩展引入 quartz 2.5.2）
            JavaClaw 直接使用底层 org.quartz.Scheduler 接管定时任务调度，
            不使用扩展提供的 QuartzAgentScheduler 封装（其内部建独立 Agent，
            会绕过 JavaClaw 自己的 ChatService 编排栈）。
        -->
        <dependency>
            <groupId>io.agentscope</groupId>
            <artifactId>agentscope-extensions-scheduler-quartz</artifactId>
        </dependency>

        <!-- JavaFX 控件库（UI 组件：Button、TextField、ScrollPane 等） -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- JavaFX Swing 桥接（devtools 驱动截图保存用） -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!--
            JavaFX 孵化富文本控件（RichTextArea/CodeArea，JavaFX 24 起孵化）
            2B 方案 POC：评估用纯 JavaFX 节点替换 MarkdownBubble 的 WebView 渲染。
            classpath（Launcher）模式下无需额外 JVM 参数；mvn javafx:run（module path）
            需要 add-modules jfx.incubator.richtext（见 javafx-maven-plugin options）。
        -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>jfx-incubator-richtext</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!--
            Jakarta Mail（邮件收发）
            提供 SMTP 发送和 IMAP 接收能力
        -->
        <dependency>
            <groupId>org.eclipse.angus</groupId>
            <artifactId>angus-mail</artifactId>
            <version>${angus.mail.version}</version>
        </dependency>

        <!--
            Apache PDFBox（PDF 文本提取）
            用于从 PDF 文档中提取文本内容发送给模型
        -->
        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>${pdfbox.version}</version>
        </dependency>

        <!--
            OpenAI Java SDK（嵌入模型）
            AgentScope 的 OpenAITextEmbedding 依赖此 SDK，需单独引入
        -->
        <dependency>
            <groupId>com.openai</groupId>
            <artifactId>openai-java</artifactId>
            <version>4.28.0</version>
        </dependency>

        <!--
            Anthropic Java SDK（Claude 系列模型）
            AgentScope 的 AnthropicChatModel 依赖此 SDK，需单独引入
        -->
        <dependency>
            <groupId>com.anthropic</groupId>
            <artifactId>anthropic-java-client-okhttp</artifactId>
            <version>2.14.0</version>
        </dependency>

        <!--
            Google GenAI SDK（Gemini 系列模型）
            AgentScope 的 GeminiChatModel 依赖此 SDK，需单独引入
        -->
        <dependency>
            <groupId>com.google.genai</groupId>
            <artifactId>google-genai</artifactId>
            <version>1.28.0</version>
        </dependency>

        <!--
            RichTextFX（富文本编辑/展示）
            提供原生文本选中复制、多行输入、样式化文本等能力
        -->
        <dependency>
            <groupId>org.fxmisc.richtext</groupId>
            <artifactId>richtextfx</artifactId>
            <version>${richtextfx.version}</version>
        </dependency>

        <!--
            CommonMark（Markdown 解析与 HTML 渲染）
            用于聊天气泡中 Markdown 格式内容的渲染展示
        -->
        <dependency>
            <groupId>org.commonmark</groupId>
            <artifactId>commonmark</artifactId>
            <version>${commonmark.version}</version>
        </dependency>
        <dependency>
            <groupId>org.commonmark</groupId>
            <artifactId>commonmark-ext-gfm-tables</artifactId>
            <version>${commonmark.version}</version>
        </dependency>
        <dependency>
            <groupId>org.commonmark</groupId>
            <artifactId>commonmark-ext-gfm-strikethrough</artifactId>
            <version>${commonmark.version}</version>
        </dependency>
        <dependency>
            <groupId>org.commonmark</groupId>
            <artifactId>commonmark-ext-autolink</artifactId>
            <version>${commonmark.version}</version>
        </dependency>

        <!--
            Logback 日志实现
            SLF4J API 已由 AgentScope 传递引入，这里只需要实现层
        -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <!--
            Playwright Java（原生浏览器自动化）
            替代 JavaFX WebView，提供完整的浏览器交互能力：
            无障碍树快照、元素引用、截图标注、Tab管理、Cookie 持久化等
        -->
        <dependency>
            <groupId>com.microsoft.playwright</groupId>
            <artifactId>playwright</artifactId>
            <version>1.52.0</version>
        </dependency>

        <!--
            EclipseStore（Java 原生对象图持久化）+ GigaMap JVector 向量索引
            作为重构后记忆/知识子系统的统一存储基座：对象图持久化 + ANN 语义检索
            注意：JVector 走 jdk.incubator.vector（JDK 25 仍为孵化模块），
            运行需在 JVM 参数加 add-modules jdk.incubator.vector（见 javafx-maven-plugin options）
        -->
        <dependency>
            <groupId>org.eclipse.store</groupId>
            <artifactId>storage-embedded</artifactId>
            <version>${eclipsestore.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.store</groupId>
            <artifactId>gigamap-jvector</artifactId>
            <version>${eclipsestore.version}</version>
        </dependency>

        <!-- H2：工作区本地结构化配置数据库（data/javaclaw.mv.db） -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${h2.version}</version>
        </dependency>

        <!-- JUnit 5（单元测试；运行 mvn test） -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.4</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Maven 编译插件：指定 JDK 25 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>25</release>
                    <!-- JVector 使用孵化中的向量 API（JDK 25 仍为 incubator），编译期需放行该模块 -->
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>jdk.incubator.vector</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!--
                JavaFX Maven 插件：用于运行 JavaFX 应用
                使用 Launcher 类作为入口，避免非模块化 JavaFX 的启动问题
                运行命令：mvn javafx:run
            -->
            <!-- Surefire：跑 JUnit 5 测试；argLine 与编译参数对齐（JVector 孵化向量 API） -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
                <configuration>
                    <argLine>--add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>com.javaclaw.app.Launcher</mainClass>
                    <!-- 运行期放行 JVector 的孵化向量 API + EclipseStore/JVector 的 FFM 原生访问（FFM 在 JDK 25 已 GA，无需 enable-preview）。
                         三条 add-exports 服务于 Markdown 气泡（chat.markdown）依赖的 JavaFX 孵化富文本控件：
                         本插件只把 javafx-* 前缀构件放 module path，jfx-incubator-richtext 落在 classpath
                        （unnamed module），而 JavaFX 核心对 com.sun 内部包只做了面向 jfx.incubator.richtext
                         命名模块的定向导出，故需显式向 ALL-UNNAMED 开放（清单由 jdeps 对两个孵化 jar 实测得出）。
                         IDE 直跑（JavaFX 全在 classpath）不需要这三条参数。 -->
                    <options>
                        <option>--add-modules</option>
                        <option>jdk.incubator.vector</option>
                        <option>--enable-native-access=ALL-UNNAMED</option>
                        <option>--add-exports</option>
                        <option>javafx.base/com.sun.javafx=ALL-UNNAMED</option>
                        <option>--add-exports</option>
                        <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
                        <option>--add-exports</option>
                        <option>javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED</option>
                    </options>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
